# src/api/interfaces/interfaces.ts
@@ -1,3 +1,6 @@
+import { AccessControl } from "accesscontrol";
+import { FastifyRequest, RouteGenericInterface } from "fastify";
+
 export interface IProjection {
     [key: string]: 1 | 0
 }
@@ -19,3 +22,24 @@ export interface ILogin {
 export interface IPasswordBody {
     password: string;
 }
+
+export interface IUserRequest {
+    exp: number;
+    iat: number;
+    user: {
+        _id: string;
+        username: string;
+        email: string;
+        roles: [ string ]
+    }
+}
+
+export interface IRole {
+    role: string;
+    ressoure: string;
+
+}
+
+export interface IRequestServer<T extends RouteGenericInterface = any> extends FastifyRequest<T> {
+    accessControl: AccessControl;
+  }
